--- a/react_AI_chatbot/package.json
+++ b/react_AI_chatbot/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "openai": "^6.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
