--- a/react_AI_chatbot/package.json
+++ b/react_AI_chatbot/package.json
@@ -14,7 +14,8 @@
     "openai": "^6.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-textarea-autosize": "^8.5.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
